<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.juanmorales.tareacontactos.ConfirmarDatos">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Confirmar Datos "
        android:textSize="@dimen/titulo"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/txttitulo"
        android:layout_centerHorizontal="true"
         />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_nombre_conf"
        android:id="@+id/txtNombre"
        android:textSize="@dimen/labeldatos"
        android:layout_marginTop="39dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Juan Carlos Morales"
        android:id="@+id/txtNombreDato"
        android:textSize="@dimen/labelresultados"
        android:layout_alignTop="@+id/txtNombre"
        android:layout_toRightOf="@+id/txtNombre"
        android:layout_toEndOf="@+id/txtNombre" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_fecha_conf"
        android:id="@+id/txtfecha1"
        android:textSize="@dimen/labeldatos"
        android:layout_marginTop="39dp"
        android:layout_below="@id/txtNombreDato"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_fecha_dato"
        android:textSize="@dimen/labelresultados"
        android:id="@+id/txtFechaDato"
        android:layout_alignTop="@+id/txtfecha1"
        android:layout_toRightOf="@+id/txtfecha1"
        android:layout_toEndOf="@+id/txtfecha1" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_telefono_conf"
        android:textSize="@dimen/labeldatos"
        android:id="@+id/txtTelefoConf"
        android:layout_marginTop="39dp"
        android:layout_below="@id/txtFechaDato"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_telefono_dato"
        android:textSize="@dimen/labelresultados"
        android:id="@+id/txtTelefonoDato"
        android:layout_alignTop="@+id/txtTelefoConf"
        android:layout_toRightOf="@+id/txtTelefoConf"
        android:layout_toEndOf="@+id/txtTelefoConf" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_email_conf"
        android:textSize="@dimen/labeldatos"
        android:id="@+id/txtEmailConf"
        android:layout_marginTop="39dp"
        android:layout_below="@id/txtTelefonoDato"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_email_dato"
        android:textSize="@dimen/labelresultados"
        android:id="@+id/txtEmailDato"
        android:layout_alignTop="@+id/txtEmailConf"
        android:layout_toRightOf="@+id/txtEmailConf"
        android:layout_toEndOf="@+id/txtEmailConf" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_descripcion_conf"
        android:textSize="@dimen/labeldatos"
        android:id="@+id/txtDescripcionConf"
        android:layout_marginTop="39dp"
        android:layout_below="@id/txtEmailDato"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_descripcion_dato"
        android:textSize="@dimen/labelresultados"
        android:id="@+id/txtDescripcionDato"
        android:layout_alignTop="@+id/txtDescripcionConf"
        android:layout_toRightOf="@+id/txtDescripcionConf"
        android:layout_toEndOf="@+id/txtDescripcionConf" />


    <Button
        android:id="@+id/btnEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_editar"
        android:theme="@style/btnRaisedSiguiente"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
