<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.juanmorales.tareacontactos.MainActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:id="@+id/view">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtNombre"
            android:text=" "
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_nombre"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view"
        android:layout_marginTop="24dp"
        android:id="@+id/view2"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtFecha"
            android:text=" "
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_fecha"

            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view2"
        android:layout_marginTop="24dp"
        android:id="@+id/view3"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtTelefono"
            android:text=" "
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_telefono"
           />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view3"
        android:layout_marginTop="24dp"
        android:id="@+id/view4"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtEmail"
            android:text=" "
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_email"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view4"
        android:layout_marginTop="24dp"
        android:id="@+id/view5"
        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtDescripcion"
            android:text=" "
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_descripcion"
            />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_btn_siguiente"
        android:theme="@style/btnRaisedSiguiente"
        android:layout_alignParentBottom="true"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_fecha"
        android:onClick="showDatePickerDialog"
        android:layout_alignTop="@+id/view2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:theme="@style/btnRaisedSiguiente"/>




</RelativeLayout>
